# VCT2

./: CMakeLists.txt  README.md
include/: Application.h  Camera.h  ComputeVoxelizer.h  GeometryVoxelizer.h  Helper.h  Mesh.h  RenderObject.h  ShadowMap.h  TriangleRenderer.h  Voxelizer.h
src/: Application.cpp  CMakeLists.txt  Camera.cpp  ComputeVoxelizer.cpp  GeometryVoxelizer.cpp  Helper.cpp  Mesh.cpp  ShadowMap.cpp  TriangleRenderer.cpp  Voxelizer.cpp
src/shaders/: main.vert  test.vert
src/shaders/ComputeVoxelizer/: common.h  largeTriangles.comp  smallTriangles.comp
src/shaders/ConeTracer/: MipMapper.comp
src/shaders/GeometryVoxelizer/: geometryVoxelizer.frag  geometryVoxelizer.geom  geometryVoxelizer.vert
src/shaders/VoxelVis/: voxelVis.frag  voxelVis.vert  voxelVisPerVoxel.comp
src/shaders/main/: main.frag
src/shaders/shadowmap/: shadowmap.frag  shadowmap.vert
